<resources>
    <string name="app_name">koskaElokuvat</string>
    <string name="time">Time:</string>
    <string name="location">Location:</string>
    <string name="duration">Duration:</string>
    <string name="year">Year:</string>
    <string name="genres">Genres:</string>
    <string name="buy">Buy ticket</string>
    <string name="select_language">Change app Language</string>
    <string name="settings">Settings</string>
    <string name="select_default_area">Select default area</string>
    <string name="gps_setting">Gps location:</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="turn_gps_off">You must turn first gps off if you want change location manually</string>
    <string name="location_denied">Location permission denied</string>
</resources>
